<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">
    <include layout="@layout/about_lifebox_top"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:src="@mipmap/ic_launcher_round"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#7E7E7E"
            android:textStyle="bold"
            android:text="@string/intruduce_one"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="16sp"
            android:textColor="#bfbfbf"
            android:text="@string/intruduce_one_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#7E7E7E"
            android:textStyle="bold"
            android:text="@string/intruduce_two"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="16sp"
            android:textColor="#bfbfbf"
            android:text="@string/intruduce_two_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="16sp"
            android:textColor="#bfbfbf"
            android:text="@string/intruduce_three_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="16sp"
            android:textColor="#bfbfbf"
            android:text="@string/intruduce_four_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textSize="16sp"
            android:textColor="#bfbfbf"
            android:text="@string/intruduce_five_content"/>

    </LinearLayout>

</LinearLayout>